clusters/staging/apps/web/personal-blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-blog
  namespace: web
spec:
  selector:
    matchLabels:
      app: personal-blog
  replicas: 1
  template:
    metadata:
      labels:
        app: personal-blog
    spec:
      imagePullSecrets:
        - name: ghrc-credentials
      containers:
        - name: personal-blog
          image: ghcr.io/lewi0231/home-lab-personal-blog:latest # {"$imagepolicy": "flux-system:personal-blog-policy"}
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: personal-blog
  namespace: web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: personal-blog
