clusters/staging/apps/web/personal-blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-blog-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: personal-blog.staging.home # Use your preferred hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-blog
                port:
                  number: 80
